# my_etf_trader

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  GIT_USAGE.md  README.md  pyproject.toml  quick_start.md
.claude/: settings.local.json
.github/workflows/: daily-recommendation.yml
data/: universe_snapshot_backtest_separate_20260513_111422.json  universe_snapshot_manual_health_check_20260513_111240.json
data/tuning_results/: 159326_20260304_203540_tuning.json  159566_20260304_201310_tuning.json  159566_20260304_203557_tuning.json  159566_20260304_211751_tuning.json  159566_20260304_220333_tuning.json  159828_20260304_201313_tuning.json  159828_20260304_203638_tuning.json  159828_20260304_211814_tuning.json  159828_20260304_220525_tuning.json  159869_20260304_201412_tuning.json  159869_20260304_205156_tuning.json  159869_20260304_212721_tuning.json  159869_20260304_223447_tuning.json  159886_20260304_201414_tuning.json  159886_20260304_205235_tuning.json  159886_20260304_212741_tuning.json  159886_20260304_223532_tuning.json  159901_20260304_201302_tuning.json  159901_20260304_203207_tuning.json  159901_20260304_211644_tuning.json  159901_20260304_220044_tuning.json  159915_20260304_201257_tuning.json  159915_20260304_203100_tuning.json  159915_20260304_211614_tuning.json  159915_20260304_215936_tuning.json  159928_20260304_201317_tuning.json  159928_20260304_203734_tuning.json  159928_20260304_211845_tuning.json  159928_20260304_220724_tuning.json  159995_20260304_201305_tuning.json  159995_20260304_203325_tuning.json  159995_20260304_211709_tuning.json  (+95 more)
scripts/: advanced_indicators.py  fetch_data.py  full_workflow.py  indicators.py  recommend.py  run_backtest.py  train_models.py
tests/: test_backtest_engine.py  test_config.py  test_daily_recommendation.py  test_data_health.py  test_database.py  test_indicators.py  test_training_validation.py
(+117 files in other folders)
